log
Fri 17 Mar 2023 02:17:31 AM UTC: 
 tests:  0|7
total_score: 0/70
890e2a9
Fri 17 Mar 2023 02:18:44 AM UTC: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
4e278d1
Fri 17 Mar 2023 02:22:04 AM UTC: 
 exercises.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘arrayMaxMin’:
exercises.c:31:12: error: expected ‘(’ before ‘*’ token
   31 |         if *a[i] > *max
      |            ^
      |            (
exercises.c:31:12: error: invalid type argument of unary ‘*’ (have ‘int’)
   31 |         if *a[i] > *max
      |            ^~~~~
Compilation failed
4705207
Fri 17 Mar 2023 02:22:17 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘arrayMaxMin’:
exercises.c:31:13: error: invalid type argument of unary ‘*’ (have ‘int’)
   31 |         if (*a[i] > *max)
      |             ^~~~~
exercises.c:32:18: error: invalid type argument of unary ‘*’ (have ‘int’)
   32 |           *max = *a[i];
      |                  ^~~~~
Compilation failed
db6e080
Fri 17 Mar 2023 02:22:29 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘arrayMaxMin’:
exercises.c:32:18: error: invalid type argument of unary ‘*’ (have ‘int’)
   32 |           *max = *a[i];
      |                  ^~~~~
Compilation failed
df91efa
Fri 17 Mar 2023 02:22:38 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
9e6d71e
Fri 17 Mar 2023 02:23:42 AM UTC: 
 exercises.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  1|6
total_score: 10/70
ce14023
Fri 17 Mar 2023 02:23:57 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘arrayMaxMin’:
exercises.c:34:11: error: invalid operands to binary * (have ‘int’ and ‘int *’)
   33 |         else (a[i] < *min)
      |              ~~~~~~~~~~~~~
      |                    |
      |                    int
   34 |           *min = a[i];
      |           ^
Compilation failed
effe89d
Fri 17 Mar 2023 02:24:05 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|5
total_score: 20/70
3b33f1c
Fri 17 Mar 2023 02:25:05 AM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 20/70
9adb0ec
Fri 17 Mar 2023 02:27:26 AM UTC: 
 exercises.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘arrayMaxMin’:
exercises.c:31:18: error: comparison between pointer and integer [-Werror]
   31 |         if (a[i] > max)
      |                  ^
exercises.c:32:15: error: assignment to ‘int *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   32 |           max = a[i];
      |               ^
exercises.c:33:18: error: comparison between pointer and integer [-Werror]
   33 |         if (a[i] < min)
      |                  ^
exercises.c:34:15: error: assignment to ‘int *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   34 |           min = a[i];
      |               ^
cc1: all warnings being treated as errors
Compilation failed
effb2f4
Fri 17 Mar 2023 02:27:36 AM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘arrayMaxMin’:
exercises.c:32:15: error: assignment to ‘int *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   32 |           max = a[i];
      |               ^
exercises.c:34:15: error: assignment to ‘int *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   34 |           min = a[i];
      |               ^
cc1: all warnings being treated as errors
Compilation failed
6f389d5
Fri 17 Mar 2023 02:27:44 AM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|6
total_score: 10/70
d3017cd
Fri 17 Mar 2023 02:28:01 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
2d258bf
Fri 17 Mar 2023 02:30:41 AM UTC: 
 exercises.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  2|5
total_score: 20/70
ee556f2
Fri 17 Mar 2023 02:35:54 AM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
exercises.c: In function ‘crearPersona’:
exercises.c:58:17: error: format ‘%d’ expects argument of type ‘int *’, but argument 4 has type ‘int’ [-Werror=format=]
   58 |   scanf("%c %c %d", nombre, rut, edad);
      |                ~^                ~~~~
      |                 |                |
      |                 int *            int
exercises.c:58:3: error: ignoring return value of ‘scanf’ declared with attribute ‘warn_unused_result’ [-Werror=unused-result]
   58 |   scanf("%c %c %d", nombre, rut, edad);
      |   ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
44b937c
Fri 17 Mar 2023 02:36:44 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearPersona’:
exercises.c:58:17: error: format ‘%i’ expects argument of type ‘int *’, but argument 4 has type ‘int’ [-Werror=format=]
   58 |   scanf("%c %c %i", nombre, rut, edad);
      |                ~^                ~~~~
      |                 |                |
      |                 int *            int
exercises.c:58:3: error: ignoring return value of ‘scanf’ declared with attribute ‘warn_unused_result’ [-Werror=unused-result]
   58 |   scanf("%c %c %i", nombre, rut, edad);
      |   ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
decf68d
